--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-
     <meta charset="utf-8" />
     <meta name='viewport' content='width=device-width'/>
     <title>carmine-cassie</title>
@@ -12,19 +11,10 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://cdn.jsdelivr.net/npm/three@0.168.0/build/three.module.js",
-          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.168.0/examples/jsm/"
-        }
-      }
-    </script>
-
-    <script src="script.js" type="module"></script>
   </head>
 
   <body style="background-color:#200">
+    <script src="script.js" type="module" defer></script>
     <canvas id="mycanvas" style="position:fixed;top:0;left:0;width:100%;height:100%"></canvas>
 
     <div style="line-height:1.5em;padding-left:1em;padding-right:1em;position:absolute;background:#0007;backdrop-filter:blur(5px);width:calc(100% - 2em);height:3.5em;left:0px;top:0px;z-index:2;box-shadow: #9c003370 0px 0px 15px 0px">
@@ -43,6 +33,7 @@
         gl_Position = vec4(position, 1.0);
       }
     </script>
+
     <script id = "fragmentShader" type="shader">
       uniform float time;
       uniform highp sampler2D grav_lens;
