--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 
     <link rel="stylesheet" href="/assets/css/style.css">
 
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@0.173.0/build/three.module.js",
+          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.173.0/examples/jsm/"
+        }
+      }
+    </script>
+
   </head>
 
   <body style="background-color:#200">
