--- a/index.html
+++ b/index.html
@@ -3,31 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <meta name='viewport' content='width=device-width'/>
-    <title>carmine-cassie</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Germania+One&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <title>Carmine Cassie</title>
 
     <link rel="stylesheet" href="/assets/css/style.css">
 
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "https://cdn.jsdelivr.net/npm/three@0.173.0/build/three.module.js",
-          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.173.0/examples/jsm/"
-        }
-      }
-    </script>
-
   </head>
 
-  <body style="background-color:#200">
-    <script src="/assets/shaders/black_hole.js" type="module" defer></script>
-    <canvas id="bgcanvas" style="position:fixed;top:0;left:0;width:100%;height:100%"></canvas>
+  <body>
+    <div class="main-paper">
+        <h1>Hello!</h1>
 
-    <div style="line-height:1.5em;padding-left:1em;padding-right:1em;position:absolute;background:#0007;backdrop-filter:blur(5px);width:calc(100% - 2em);height:3.5em;left:0px;top:0px;z-index:2;box-shadow: #f357 0px 0px 15px 0px">
-      <h1 class="nav_element" style="color:#ff909f"><a href="index">carmine-cassie</a></h1>
+        <p>
+          I'm doing some rennovations to my site, so it's a bit under
+          construction for now!
+        </p>
+        
     </div>
   </body>
 </html>
