added bingo descriptions

--- a/bingo2025.html
+++ b/bingo2025.html
@@ -71,79 +71,87 @@
         <p>Some of my goals have a bit more to them than fit in the little bingo board squares, so here I've got some room to give extra details about each<b>!</b></p>
 
         <h3>A1: Ls 50 Hours</h3>
-        <p class="compact"></p>
+        <p class="compact">At the start of the year, I had, uh, 45 minutes on my Ls, so, wanna get a bit more progress than that. 50 hours seems a good number, that's like an hour every weekend<b>!</b></p>
 
         <h3>B1: Makeup</h3>
-        <p class="compact"></p>
+        <p class="compact">I tried to have concrete definitions of success for a lot of these (hence all the numbers), but this one's softer. I just want to learn enough to be proud of myself :3</p>
 
         <h3>C1: Good CG Art Piece</h3>
-        <p class="compact"></p>
+        <p class="compact">Haven't done art in a while<b>!</b> This goal is to help me get back into it. "Good" is by my judgement - I'm striving for that feeling where the art <b>gets</b> me, like enthralled.</p>
 
         <h3>D1: Coding Project</h3>
-        <p class="compact"></p>
+        <p class="compact">A coding project is like an art project, but more employable<b>!</b> Can't be for work or uni, has to be a personal project.</p>
 
         <h3>E1: Grad Offer</h3>
-        <p class="compact"></p>
+        <p class="compact">I'm bad at having the motivation to apply for jobs, so by having this on my bingo board, when I look at the board to see how to spend my time, I'll get a little reminder to apply.</p>
 
         <h3>A2: Try Bookbinding</h3>
-        <p class="compact"></p>
+        <p class="compact">Specifically, like, handbinding a book. I think this would be cool for a notebook for a TTRPG character. I want to buy paper of the right grain and use a bone folder and stitch and glue signatures, I think it would be fun!</p>
 
         <h3>B2: 10 Theater Visits</h3>
-        <p class="compact"></p>
+        <p class="compact">Live music, live performance, it always blows me away, it's so amazing to experience. If I go to 10 shows I'll have had a very nice year :D</p>
 
         <h3>C2: Tattoo</h3>
-        <p class="compact"></p>
+        <p class="compact">I want to make a claim to my body.</p>
 
         <h3>D2: Learn a new Piano/Lyre Song</h3>
-        <p class="compact"></p>
+        <p class="compact">Every time I sit down at an instrument, I play, like, the one song I already know, because I find it frustrating to learn new songs. I want to push through.</p>
 
         <h3>E2: Do 3 Pinks</h3>
-        <p class="compact"></p>
+        <p class="compact"><b>Pink</b> is a difficulty in my bouldering gym, around V3. Usually I find I can flash most <b>teals</b> (V2ish), but have no idea how to start pinks - this goal is designed to help me persevere and overcome the difficulty spike between teal and pink.</p>
 
         <h3>A3: Go Off-Grid for a Weekend</h3>
-        <p class="compact"></p>
+        <p class="compact">I think it would be nice. Off-grid here means not using the internet - with potential exceptions for like, maps and train timetables.</p>
 
         <h3>B3: Playtest Own TTRPG</h3>
-        <p class="compact"></p>
+        <p class="compact">I love TTRPG design, I think the medium is awesome<b>!</b> I don't want to make this "write" a TTRPG or "finish" a TTRPG - I want to reach a point where it should be playtested and then actually playtest it, instead of leaving it to gather dust.</p>
 
         <h3>C3: Turn 21 [✓]</h3>
-        <p class="compact"></p>
+        <p class="compact">My free space<b>!</b> I think it's fun that my free space can increment each year.</p>
 
         <h3>D3: 60kg</h3>
-        <p class="compact"></p>
+        <p class="compact">Okay, so, at the start of the year I'm sitting around 50kg, which is, real underweight for my height (I'm tall :3). Gaining 10kgs in a year is a bit of a crazy goal, I've been told, so:</p>
+        
+        <p><b>If I don't crack 54kg by July, I'll reduce the goal to 55kg.</b></p>
+
+        <p>My reasons for this goal aren't just, make number go up. What I actually want to do is more consistently eat 3 meals, have more energy, eat more snacks, and have more fat reserves, so I don't melt through the muscle I'm gaining when I excercise.</p>
+
+        <p>I wanted to hit all these factors while having a specific goal that fit in a bingo box, so, a round number target will have to do.</p>
 
         <h3>E3: 5 New Wardrobe Pieces</h3>
-        <p class="compact"></p>
+        <p class="compact">My wardrobe could do with just an itty bit of expanding, and also, going shopping with friends is fun<b>!</b></p>
 
         <h3>A4: Road Trip w+ Frens</h3>
-        <p class="compact"></p>
+        <p class="compact">Okay so not a "Road Trip", per se, any kind of holiday adventure will do<b>!</b></p>
 
         <h3>B4: Practice Voice</h3>
-        <p class="compact"></p>
+        <p class="compact">Bit of a broad goal, I just want to do something that involves recording my voice, listening to the recording, and then trying to improve. This could range from voice training to singing<b>!</b></p>
 
         <h3>C4: Boulder x8 in 1 Month</h3>
-        <p class="compact"></p>
+        <p class="compact">Consistency is important<b>!</b> Maybe a bit of a crazy target, but I've got 12 attempts, so she'll be right.</p>
 
         <h3>D4: Watch 50 Movies</h3>
-        <p class="compact"></p>
+        <p class="compact">Last year I watched 44 movies, and this year, I wanna do a little bit more<b>!</b> Part of a larger trend I'm working on where I'm trying to be more intentional with my media consumption - less scrolling.</p>
 
         <h3>E4: 3 Wanderhome Sessions</h3>
-        <p class="compact"></p>
+        <p class="compact">Okay the actual goal is more complex - I want to play 3 TTRPG sessions, that are connected (not unrelated one-shots) in an indie system with good game design. I just picked "Wanderhome" because it meets those criteria and I want to play it.</p>
 
         <h3>A5: Put 3 Things on Website</h3>
-        <p class="compact"></p>
+        <p class="compact">I want to get my website off the ground, I think personal websites are awesome and I want one and it's within my power to make that a reality<b>!</b></p>
 
         <h3>B5: 5 New Recipes</h3>
-        <p class="compact"></p>
+        <p class="compact">It's easy to follow a recipe, but having to look up and refer to a recipe is a big overhead cost, while cooking. If I learn some more, I'll just have them up my sleeve, raring and ready to go<b>!</b></p>
 
         <h3>C5: Get + Wear New Swimwear [✓]</h3>
-        <p class="compact"></p>
+        <p class="compact">I haven't had swimwear I liked in like, 4 years, so I haven't gone swimming or to the beach. Seems a pretty easy problem to solve, and swimming is fun<b>!</b></p>
 
         <h3>D5: 50 Auslan Signs</h3>
-        <p class="compact"></p>
+        <p class="compact">Ooh this is another one that didn't fit in the box. I've a friend that's considering getting into <b>luka pona</b>, so I'll also consider <b>Conversational in luka pona</b> as an alternate success condition!</p>
+
+        <p>Like, my use case for a signed language is communicating with my (hearing) friends when we're in a loud environment, or when one of them goes non-speaking.Auslan/luka pona both satisfy these use cases, so it makes sense to learn whatever my friends are learning.</p>
 
         <h3>E5: Finish Pact</h3>
-        <p class="compact"></p>
+        <p class="compact">Okay, this is a sneaky one. I don't just want to finish reading <b>Pact</b>, a webserial by wildbow. I also want to typeset it, design a cover, and get it printed, maybe even make a slipcase! I really like the idea of having physical items to represent digital media.</p>
       
     </div>
   </body>
