--- a/bingo2025.html
+++ b/bingo2025.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="main-paper">
+    <div><div class="main-paper">
         <h1>2025 Bingo</h1>
 
         <p>Instead of creating New Year's Resolutions for 2025, I made a bingo board<b>!</b></p>
@@ -66,6 +66,7 @@
 
         <h3>February</h3>
         <p class="compact"><b>Feb 1st:</b> Watched <b>Ghost Quartet</b> again on closing night, my <b>second</b> theater visit of the year<b>!</b></p>
+        <p class="compact"><b>Feb 2nd:</b> Put <b>this bingo page</b> on my website, that's <b>1/3!</b></p>
 
         <h2>The Goals</h2>
         <p>Some of my goals have a bit more to them than fit in the little bingo board squares, so here I've got some room to give extra details about each<b>!</b></p>
@@ -153,6 +154,6 @@
         <h3>E5: Finish Pact</h3>
         <p class="compact">Okay, this is a sneaky one. I don't just want to finish reading <b>Pact</b>, a webserial by wildbow. I also want to typeset it, design a cover, and get it printed, maybe even make a slipcase! I really like the idea of having physical items to represent digital media.</p>
       
-    </div>
+    </div></div>
   </body>
 </html>
