--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="main-paper">
+    <div class="main-paper"><div class="main-paper-padding">
         <h1>Hello!</h1>
 
         <p>
@@ -18,6 +18,6 @@
           construction for now!
         </p>
         
-    </div>
+    </div></div>
   </body>
 </html>
