--- a/bingo2025.html
+++ b/bingo2025.html
@@ -11,6 +11,9 @@
 
   <body>
     <div><div class="main-paper">
+
+      <p><a href="/">Home</a> » </p>
+
         <h1>2025 Bingo</h1>
 
         <p>Instead of creating New Year's Resolutions for 2025, I made a bingo board<b>!</b></p>
