--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     <div class="main-paper"><div class="main-paper-padding">
         <h1>Hello!</h1>
 
-        <p>
-          I'm doing some rennovations to my site, so it's a bit under
-          construction for now!
-        </p>
+        <p>I'm doing some rennovations to my site, so it's a bit under construction for now!</p>
+
+        <p>So as not to leave you disappointed, I'll spare you a sitemap:</p>
+
+        <p class="compact">&nbsp;&nbsp;* <a href="/bingo2025.html">My 2025 Bingo Board</a></p>
+        <p class="compact">&nbsp;&nbsp;* <a href="/blackhole.html">A Black Hole Shader</a></p>
+
+        <p>Thanks for stopping by!</p>
+
+
         
     </div></div>
   </body>
