--- a/bingo2025.html
+++ b/bingo2025.html
@@ -70,6 +70,9 @@
         <h3>February</h3>
         <p class="compact"><b>Feb 1st:</b> Watched <b>Ghost Quartet</b> again on closing night, my <b>second</b> theater visit of the year<b>!</b></p>
         <p class="compact"><b>Feb 2nd:</b> Put <b>this bingo page</b> on my website, that's <b>1/3!</b></p>
+        <p class="compact"><b>Feb 2nd:</b> Watched <b>Marcel the Shell With Shoes On!</b> <b>6/50.</b></p>
+        <p class="compact"><b>Feb 2nd:</b> Logged my <b>first</b> hour of driving<b>!</b></p>
+        <p class="compact"><b>Feb 2nd:</b> Finished reading <b>Pact!</b></p>
 
         <h2>The Goals</h2>
         <p>Some of my goals have a bit more to them than fit in the little bingo board squares, so here I've got some room to give extra details about each<b>!</b></p>
