--- a/bingo2025.html
+++ b/bingo2025.html
@@ -73,6 +73,7 @@
         <p class="compact"><b>Feb 2nd:</b> Watched <b>Marcel the Shell With Shoes On!</b> <b>6/50.</b></p>
         <p class="compact"><b>Feb 2nd:</b> Logged my <b>first</b> hour of driving<b>!</b></p>
         <p class="compact"><b>Feb 2nd:</b> Finished reading <b>Pact!</b></p>
+        <p class="compact"><b>Feb 6th:</b> Watched <b>Challengers!</b> <b>7/50.</b></p>
 
         <h2>The Goals</h2>
         <p>Some of my goals have a bit more to them than fit in the little bingo board squares, so here I've got some room to give extra details about each<b>!</b></p>
