--- a/bingo2025.html
+++ b/bingo2025.html
@@ -74,7 +74,9 @@
         <p class="compact"><b>Feb 2nd:</b> Logged my <b>first</b> hour of driving<b>!</b></p>
         <p class="compact"><b>Feb 2nd:</b> Finished reading <b>Pact!</b></p>
         <p class="compact"><b>Feb 6th:</b> Watched <b>Challengers!</b> <b>7/50.</b></p>
-
+        <p class="compact"><b>Feb 10th:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
+        <p class="compact"><b>Feb 10th:</b> Climbed my <b>second</b> pink this year<b>!</b> I spent a long time studying it, and then took only two attempts.</p>
+      
         <h2>The Goals</h2>
         <p>Some of my goals have a bit more to them than fit in the little bingo board squares, so here I've got some room to give extra details about each<b>!</b></p>
 
