--- a/bingo2025.html
+++ b/bingo2025.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name='viewport' content='width=device-width'/>
-    <title>Carmine Cassie</title>
+    <title>2025 Bingo</title>
 
     <link rel="stylesheet" href="/assets/css/style.css">
 
@@ -20,7 +20,7 @@
 
         <p class="preserve-whitespace">  ┌A1────────────┬B1────────────┬C1────────────┬D1────────────┬E1────────────┐
   │              │              │              │              │              │
-  │    Ls 50     │    Makeup    │   Good CG    │    Coding    │  Grad Offer  │
+  │    Ls 50     │    Makeup    │      CG      │    Coding    │  Grad Offer  │
   │    Hours     │              │  Art Piece   │   Project    │              │
   │              │              │              │              │              │
   ├A2────────────┼B2────────────┼C2────────────┼D2────────────┼E2────────────┤
@@ -81,13 +81,13 @@
         <p>Some of my goals have a bit more to them than fit in the little bingo board squares, so here I've got some room to give extra details about each<b>!</b></p>
 
         <h3>A1: Ls 50 Hours</h3>
-        <p class="compact">At the start of the year, I had, uh, 45 minutes on my Ls, so, wanna get a bit more progress than that. 50 hours seems a good number, that's like an hour every weekend<b>!</b></p>
+        <p class="compact">At the start of the year, I had, uh, 45 minutes on my Ls, so, I wanna get a bit more progress towards my license. 50 hours seems a good, doable number, that's like an hour every weekend<b>!</b></p>
 
         <h3>B1: Makeup</h3>
-        <p class="compact">I tried to have concrete definitions of success for a lot of these (hence all the numbers), but this one's softer. I just want to learn enough to be proud of myself :3</p>
+        <p class="compact">I tried to have concrete definitions of success for a lot of these (hence all the numbers), but this one's a bit more chill. I just want to learn some more, start incorporating it into outfits, cause currently my entire repertoire is just, mascara and a bit of glitter for special occasions.</p>
 
-        <h3>C1: Good CG Art Piece</h3>
-        <p class="compact">Haven't done art in a while<b>!</b> This goal is to help me get back into it. "Good" is by my judgement - I'm striving for that feeling where the art <b>gets</b> me, like enthralled.</p>
+        <h3>C1: CG Art Piece</h3>
+        <p class="compact">Haven't done art in a while<b>!</b> This goal is to help me get back into it. Of note, I want to do something I'm actually proud of, to tick this goal off. (This is true of most of my softer/non-numerical goals.)</p>
 
         <h3>D1: Coding Project</h3>
         <p class="compact">A coding project is like an art project, but more employable<b>!</b> Can't be for work or uni, has to be a personal project.</p>
@@ -105,7 +105,7 @@
         <p class="compact">I want to make a claim to my body.</p>
 
         <h3>D2: Learn a new Piano/Lyre Song</h3>
-        <p class="compact">Every time I sit down at an instrument, I play, like, the one song I already know, because I find it frustrating to learn new songs. I want to push through.</p>
+        <p class="compact">Every time I sit down at an instrument, I play, like, the one song I already know, because I find it frustrating to learn new songs. For this goal I have to actually push through and fully learn a whole new song in its entirety.</p>
 
         <h3>E2: Do 3 Pinks</h3>
         <p class="compact"><b>Pink</b> is a difficulty in my bouldering gym, around V3. Usually I find I can flash most <b>teals</b> (V2ish), but have no idea how to start pinks - this goal is designed to help me persevere and overcome the difficulty spike between teal and pink.</p>
@@ -114,25 +114,30 @@
         <p class="compact">I think it would be nice. Off-grid here means not using the internet - with potential exceptions for like, maps and train timetables.</p>
 
         <h3>B3: Playtest Own TTRPG</h3>
-        <p class="compact">I love TTRPG design, I think the medium is awesome<b>!</b> I don't want to make this "write" a TTRPG or "finish" a TTRPG - I want to reach a point where it should be playtested and then actually playtest it, instead of leaving it to gather dust.</p>
+        <p class="compact">I love TTRPG design, I think the medium is awesome<b>!</b> I don't want to make this "write" a TTRPG or "finish" a TTRPG, that's too high pressure. I want to reach a point where it should be playtested and then actually playtest it, instead of leaving it to gather dust.</p>
 
         <h3>C3: Turn 21 [✓]</h3>
         <p class="compact">My free space<b>!</b> I think it's fun that my free space can increment each year.</p>
 
         <h3>D3: 60kg</h3>
-        <p class="compact">Okay, so, at the start of the year I'm sitting around 50kg, which is, real underweight for my height (I'm tall :3). Gaining 10kgs in a year is a bit of a crazy goal, I've been told, so:</p>
-        
-        <p><b>If I don't crack 54kg by July, I'll reduce the goal to 55kg.</b></p>
+        <p class="compact">Okay, this goal demmands a little explanation, because it's more complex than it looks. Also, if you're sensitive to discussion around eating or eating disorders, you might want to skip this one!</p>
+        <!-- TODO make the skip a link! -->
 
-        <p>My reasons for this goal aren't just, make number go up. What I actually want to do is more consistently eat 3 meals, have more energy, eat more snacks, and have more fat reserves, so I don't melt through the muscle I'm gaining when I excercise.</p>
+        <p>At the start of the year, I'm sitting a little under 50kg, which is real underweight, as I'm, like, tall. This on its own isn't a problem - BMI is a broad, sweeping assumption, and like as long as I'm getting the nutrients I need I'll be right.</p>
 
-        <p>I wanted to hit all these factors while having a specific goal that fit in a bingo box, so, a round number target will have to do.</p>
+        <p>But I'm not very good at consistently eating 3 meals a day - sometimes when I get hungry I just wait for a bit and the pain goes away, which is, not good.</p>
+
+        <p>So, my reasons for this goal aren't just make number go up, I actually just want to consistently eat 3 meals, have more body fat so that I have better energy reserves, not have a heartbeat visible through the skin, etc.</p>
+
+        <p>But I wanted to have concise, specifc goals, so I made it a nice round number<b>!</b></p>
+
+        <p>That said, I've been told this goal is crazy, so: <b>If I don't crack 54kg by July, I'll reduce the goal to 55kg.</b></p>
 
         <h3>E3: 5 New Wardrobe Pieces</h3>
         <p class="compact">My wardrobe could do with just an itty bit of expanding, and also, going shopping with friends is fun<b>!</b></p>
 
         <h3>A4: Road Trip w+ Frens</h3>
-        <p class="compact">Okay so not a "Road Trip", per se, any kind of holiday adventure will do<b>!</b></p>
+        <p class="compact">Okay so not a "Road Trip", per se, that's just in my vocabulary because that's what everyone in CSESoc called holidays. Any kind of holiday adventure will do<b>!</b></p>
 
         <h3>B4: Practice Voice</h3>
         <p class="compact">Bit of a broad goal, I just want to do something that involves recording my voice, listening to the recording, and then trying to improve. This could range from voice training to singing<b>!</b></p>
@@ -141,10 +146,10 @@
         <p class="compact">Consistency is important<b>!</b> Maybe a bit of a crazy target, but I've got 12 attempts, so she'll be right.</p>
 
         <h3>D4: Watch 50 Movies</h3>
-        <p class="compact">Last year I watched 44 movies, and this year, I wanna do a little bit more<b>!</b> Part of a larger trend I'm working on where I'm trying to be more intentional with my media consumption - less scrolling.</p>
+        <p class="compact">Last year I watched 44 movies, and this year, I wanna do, a little bit more<b>!</b> Part of a larger trend I'm working on where I'm trying to be more intentional with my media consumption - less scrolling, less slop.</p>
 
         <h3>E4: 3 Wanderhome Sessions</h3>
-        <p class="compact">Okay the actual goal is more complex - I want to play 3 TTRPG sessions, that are connected (not unrelated one-shots) in an indie system with good game design. I just picked "Wanderhome" because it meets those criteria and I want to play it.</p>
+        <p class="compact">Okay, this one is complex, the actual goal is: I want to play 3 TTRPG sessions, that are connected (not unrelated one-shots) in a non-D&D indie TTRPG with, like, good game design. I just picked "Wanderhome" because it meets those criteria and I want to play it<b>!</b></p>
 
         <h3>A5: Put 3 Things on Website</h3>
         <p class="compact">I want to get my website off the ground, I think personal websites are awesome and I want one and it's within my power to make that a reality<b>!</b></p>
@@ -153,15 +158,15 @@
         <p class="compact">It's easy to follow a recipe, but having to look up and refer to a recipe is a big overhead cost, while cooking. If I learn some more, I'll just have them up my sleeve, raring and ready to go<b>!</b></p>
 
         <h3>C5: Get + Wear New Swimwear [✓]</h3>
-        <p class="compact">I haven't had swimwear I liked in like, 4 years, so I haven't gone swimming or to the beach. Seems a pretty easy problem to solve, and swimming is fun<b>!</b></p>
+        <p class="compact">I haven't had swimwear I liked in like, 4 years, so I haven't really gone swimming or to the beach in that time. Seems a pretty easy problem to solve, and swimming is fun<b>!</b></p>
 
         <h3>D5: 50 Auslan Signs</h3>
         <p class="compact">Ooh this is another one that didn't fit in the box. I've a friend that's considering getting into <b>luka pona</b>, so I'll also consider <b>Conversational in luka pona</b> as an alternate success condition!</p>
 
-        <p>Like, my use case for a signed language is communicating with my (hearing) friends when we're in a loud environment, or when one of them goes non-speaking.Auslan/luka pona both satisfy these use cases, so it makes sense to learn whatever my friends are learning.</p>
+        <p>Like, my use case for a signed language is communicating with my (hearing) friends when we're in a loud environment, or when one of them goes non-speaking. Auslan/luka pona both satisfy these use cases, and, like, it makes sense to learn whatever my friends are learning, otherwise what's the point?</p>
 
         <h3>E5: Finish Pact</h3>
-        <p class="compact">Okay, this is a sneaky one. I don't just want to finish reading <b>Pact</b>, a webserial by wildbow. I also want to typeset it, design a cover, and get it printed, maybe even make a slipcase! I really like the idea of having physical items to represent digital media.</p>
+        <p class="compact">Okay, this is a sneaky one. I don't just want to finish reading <b>Pact</b>, (a webserial by wildbow). I also want to typeset it, design a cover, and get it printed, maybe even make a slipcase! I really like the idea of having physical items to represent digital media.</p>
       
     </div></div>
   </body>
