add comp1521 resources

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
         <p>So as not to leave you disappointed, I'll spare you a sitemap:</p>
 
         <p class="compact">&nbsp;&nbsp;* <a href="/bingo2025.html">My 2025 Bingo Board</a></p>
+        <p class="compact">&nbsp;&nbsp;* <a href="/blackhole.html">My COMP1521 Course Resources</a> [Coming Soon]</p>
         <p class="compact">&nbsp;&nbsp;* <a href="/blackhole.html">A Black Hole Shader</a></p>
 
         <p>Thanks for stopping by!</p>
 
-
-        
     </div></div>
   </body>
 </html>
