fix bingo quotes

--- a/bingo2025.html
+++ b/bingo2025.html
@@ -115,7 +115,7 @@
         <p class="compact">I think it would be nice. Off-grid here means not using the internet - with potential exceptions for like, maps and train timetables.</p>
 
         <h3>B3: Playtest Own TTRPG</h3>
-        <p class="compact">I love TTRPG design, I think the medium is awesome<b>!</b> I don't want to make this "write" a TTRPG or "finish" a TTRPG, that's too high pressure. I want to reach a point where it should be playtested and then actually playtest it, instead of leaving it to gather dust.</p>
+        <p class="compact">I love TTRPG design, I think the medium is awesome<b>!</b> I don't want to make this <q>write</q> a TTRPG or <q>finish</q> a TTRPG, that's too high pressure. I want to reach a point where it should be playtested and then actually playtest it, instead of leaving it to gather dust.</p>
 
         <h3>C3: Turn 21 [✓]</h3>
         <p class="compact">My free space<b>!</b> I think it's fun that my free space can increment each year.</p>
@@ -138,7 +138,7 @@
         <p class="compact">My wardrobe could do with just an itty bit of expanding, and also, going shopping with friends is fun<b>!</b></p>
 
         <h3>A4: Road Trip w+ Frens</h3>
-        <p class="compact">Okay so not a "Road Trip", per se, that's just in my vocabulary because that's what everyone in CSESoc called holidays. Any kind of holiday adventure will do<b>!</b></p>
+        <p class="compact">Okay so not a <q>Road Trip</q>, per se, that's just in my vocabulary because that's what everyone in CSESoc called holidays. Any kind of holiday adventure will do<b>!</b></p>
 
         <h3>B4: Practice Voice</h3>
         <p class="compact">Bit of a broad goal, I just want to do something that involves recording my voice, listening to the recording, and then trying to improve. This could range from voice training to singing<b>!</b></p>
@@ -150,7 +150,7 @@
         <p class="compact">Last year I watched 44 movies, and this year, I wanna do, a little bit more<b>!</b> Part of a larger trend I'm working on where I'm trying to be more intentional with my media consumption - less scrolling, less slop.</p>
 
         <h3>E4: 3 Wanderhome Sessions</h3>
-        <p class="compact">Okay, this one is complex, the actual goal is: I want to play 3 TTRPG sessions, that are connected (not unrelated one-shots) in a non-D&D indie TTRPG with, like, good game design. I just picked "Wanderhome" because it meets those criteria and I want to play it<b>!</b></p>
+        <p class="compact">Okay, this one is complex, the actual goal is: I want to play 3 TTRPG sessions, that are connected (not unrelated one-shots) in a non-D&D indie TTRPG with, like, good game design. I just picked <q>Wanderhome</q> because it meets those criteria and I want to play it<b>!</b></p>
 
         <h3>A5: Put 3 Things on Website</h3>
         <p class="compact">I want to get my website off the ground, I think personal websites are awesome and I want one and it's within my power to make that a reality<b>!</b></p>
@@ -168,7 +168,7 @@
 
         <h3>E5: Finish Pact</h3>
         <p class="compact">Okay, this is a sneaky one. I don't just want to finish reading <b>Pact</b>, (a webserial by wildbow). I also want to typeset it, design a cover, and get it printed, maybe even make a slipcase! I really like the idea of having physical items to represent digital media.</p>
-      
+
     </div></div>
   </body>
 </html>
