fix index links

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <p>So as not to leave you disappointed, I'll spare you a sitemap:</p>
 
-        <p class="compact">&nbsp;&nbsp;* <a href="/bingo2025.html">My 2025 Bingo Board</a></p>
-        <p class="compact">&nbsp;&nbsp;* <a href="/blackhole.html">My COMP1521 Course Resources</a> [Coming Soon]</p>
-        <p class="compact">&nbsp;&nbsp;* <a href="/blackhole.html">A Black Hole Shader</a></p>
+        <p class="compact">&nbsp;&nbsp;* <a href="/bingo2025">My 2025 Bingo Board</a></p>
+        <p class="compact">&nbsp;&nbsp;* <a href="/comp1521">My COMP1521 Course Resources</a> <b>[Coming Soon]</b></p>
+        <p class="compact">&nbsp;&nbsp;* <a href="/blackhole">A Black Hole Shader</a></p>
 
         <p>Thanks for stopping by!</p>
 
