add got tracker

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p class="compact">&nbsp;&nbsp;* <a href="/bingo2025">My 2025 Bingo Board</a></p>
         <p class="compact">&nbsp;&nbsp;* <a href="/comp1521">My COMP1521 Course Resources</a> <b>[Coming Soon]</b></p>
         <p class="compact">&nbsp;&nbsp;* <a href="/blackhole">A Black Hole Shader</a></p>
+        <p class="compact">&nbsp;&nbsp;* <a href="/got">Game of Thrones Progress Tracker</a></p>
 
         <p>Thanks for stopping by!</p>
 
