--- a/bingo2025.html
+++ b/bingo2025.html
@@ -77,6 +77,7 @@
         <p class="compact"><b>Feb 10th:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
         <p class="compact"><b>Feb 10th:</b> Climbed my <b>second</b> pink this year<b>!</b> I spent a long time studying it, and then took only two attempts.</p>
         <p class="compact"><b>Feb 16th:</b> Logged my <b>second</b> hour of driving<b>!</b></p>
+        <p class="compact"><b>Feb 20th:</b> Measured <b>≥52kg</b>.</p>
       
         <h2>The Goals</h2>
         <p>Some of my goals have a bit more to them than fit in the little bingo board squares, so here I've got some room to give extra details about each<b>!</b></p>
