--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <meta name='viewport' content='width=device-width'/>
     <title>Carmine Cassie</title>
 
     <link rel="stylesheet" href="/assets/css/style.css">
+    <script src="/assets/js/theme.js" defer></script>
 
   </head>
 
   <body>
     <div class="main-paper"><div class="main-paper-padding">
-        <h1>Hello!</h1>
+      <button data-theme-toggle>
+        <!-- Icons from pixelarticons.com -->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="dark-icon" viewBox="0 0 24 24">
+          <path d="M20 0h2v2h2v2h-2v2h-2V4h-2V2h2V0ZM8 4h8v2h-2v2h-2V6H8V4ZM6 8V6h2v2H6Zm0 8H4V8h2v8Zm2 2H6v-2h2v2Zm8 0v2H8v-2h8Zm2-2v2h-2v-2h2Zm-2-4v-2h2V8h2v8h-2v-4h-2Zm-4 0h4v2h-4v-2Zm0 0V8h-2v4h2Zm-8 6H2v2H0v2h2v2h2v-2h2v-2H4v-2Z"/>
+        </svg>
+        <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" class="light-icon" viewBox="0 0 24 24">
+          <path d="M13 0h-2v4h2V0ZM0 11v2h4v-2H0Zm24 0v2h-4v-2h4ZM13 24h-2v-4h2v4ZM8 6h8v2H8V6ZM6 8h2v8H6V8Zm2 10v-2h8v2H8Zm10-2h-2V8h2v8Zm2-14h2v2h-2V2Zm0 2v2h-2V4h2Zm2 18h-2v-2h2v2Zm-2-2h-2v-2h2v2ZM4 2H2v2h2v2h2V4H4V2ZM2 22h2v-2h2v-2H4v2H2v2Z"/>
+        </svg>
+      </button>
 
-        <p>I'm doing some rennovations to my site, so it's a bit under construction for now!</p>
+      <h1>Hello!</h1>
 
-        <p>So as not to leave you disappointed, I'll spare you a sitemap:</p>
+      <p>I'm doing some rennovations to my site, so it's a bit under construction for now!</p>
 
-        <p class="compact">&nbsp;&nbsp;* <a href="/bingo2025">My 2025 Bingo Board</a></p>
-        <p class="compact">&nbsp;&nbsp;* <a href="/comp1521">My COMP1521 Course Resources</a> <b>[Coming Soon]</b></p>
-        <p class="compact">&nbsp;&nbsp;* <a href="/blackhole">A Black Hole Shader</a></p>
-        <p class="compact">&nbsp;&nbsp;* <a href="/got">Game of Thrones Progress Tracker</a></p>
+      <p>So as not to leave you disappointed, I'll spare you a sitemap:</p>
 
-        <p>Thanks for stopping by!</p>
+      <p class="compact">&nbsp;&nbsp;* <a href="/bingo2025">My 2025 Bingo Board</a></p>
+      <p class="compact">&nbsp;&nbsp;* <a href="/comp1521">My COMP1521 Course Resources</a> <b>[Coming Soon]</b></p>
+      <p class="compact">&nbsp;&nbsp;* <a href="/blackhole">A Black Hole Shader</a></p>
+      <p class="compact">&nbsp;&nbsp;* <a href="/got">Game of Thrones Progress Tracker</a></p>
+
+      <p>Thanks for stopping by!</p>
 
     </div></div>
   </body>
