--- a/comp1521/index.html
+++ b/comp1521/index.html
@@ -31,8 +31,8 @@
       <p>Throughout this term, I plan to go through and update my resources for this course, and as part of that polish I plan to get a lot of it up on this website. When I get around to that you should be able to find it here<b>!</b></p>
 
       <h2>Weeks</h2>
-
-      <p class="compact">&nbsp;&nbsp;* Coming Soon...</p>
+      <p class="compact">&nbsp;&nbsp;* <a href="02">Week 2: Welcome to MIPS<b>!</b></a> <b>[WIP]</b></p>
+      <p class="compact">&nbsp;&nbsp;* More Coming Soon...</p>
 
     </div></div>
   </body>
