--- a/comp1521/02.html
+++ b/comp1521/02.html
@@ -5,12 +5,12 @@
     <meta name='viewport' content='width=device-width'/>
     <title>COMP1521/02</title>
     
-    <link rel="stylesheet" href="//unpkg.com/@highlightjs/cdn-assets@11.11.1/styles/dark.min.css">
-    <script src="//unpkg.com/@highlightjs/cdn-assets@11.11.1/highlight.min.js"></script>
-    <script src="//unpkg.com/@highlightjs/cdn-assets@11.11.1/languages/c.min.js"></script>
-    <script src="//unpkg.com/@highlightjs/cdn-assets@11.11.1/languages/mipsasm.min.js"></script>
-    <script src="//unpkg.com/@highlightjs/cdn-assets@11.11.1/languages/shell.min.js"></script>
-    <script src="//code.jquery.com/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/styles/dark.min.css">
+    <script src="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/highlight.min.js"></script>
+    <script src="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/languages/c.min.js"></script>
+    <script src="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/languages/mipsasm.min.js"></script>
+    <script src="https://unpkg.com/@highlightjs/cdn-assets@11.11.1/languages/shell.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/assets/js/highlight.js"></script>
     
     <link rel="stylesheet" href="/assets/css/style.css">
