--- a/bingo2025.html
+++ b/bingo2025.html
@@ -46,8 +46,8 @@
   │              │              │              │              │              │
   ├A4────────────┼B4────────────┼C4────────────┼D4────────────┼E4────────────┤
   │              │              │              │              │              │
-  │  Road Trip   │   Practice   │  Boulder x8  │   Watch 50   │ 3 Wanderhome │
-  │   w+ Frens   │    Voice     │  in 1 Month  │    Movies    │   Sessions   │
+  │  Road Trip   │   Practice   │  Boulder x8  │   Watch 50   │ 3 Connected  │
+  │   w+ Frens   │    Voice     │  in 1 Month  │    Movies    │TTRPG Sessions│
   │              │              │              │              │              │
   ├A5────────────┼B5────────────┼C5────────────┼D5────────────┼E5────────────┤
   │    Put 3     │              │              │              │              │
@@ -88,10 +88,14 @@
       <p class="compact"><b>Feb 10th:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
       <p class="compact"><b>Feb 10th:</b> Climbed my <b>second</b> pink this year<b>!</b> I spent a long time studying it, and then took only two attempts.</p>
       <p class="compact"><b>Feb 16th:</b> Logged my <b>second</b> hour of driving<b>!</b></p>
+      <p class="compact"><b>Feb 17th:</b> Put <a href="/got">a Game of Thrones episode tracker</a> on my website, that's <b>2/3!</b></p>
       <p class="compact"><b>Feb 20th:</b> Measured <b>≥52kg</b>.</p>
+
+      <h3>March</h3>
+      <p class="compact"><b>Mar 1st:</b> Watched <b>Chicago!</b> <b>8/50.</b></p>
     
-      <h2>The Goals</h2>
-      <p>Some of my goals have a bit more to them than fit in the little bingo board squares, so here I've got some room to give extra details about each<b>!</b></p>
+      <h2>In Detail</h2>
+      <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
 
       <h3>A1: Ls 50 Hours</h3>
       <p class="compact">At the start of the year, I had, uh, 45 minutes on my Ls, so, I wanna get a bit more progress towards my license. 50 hours seems a good, doable number, that's like an hour every weekend<b>!</b></p>
@@ -108,8 +112,12 @@
       <h3>E1: Grad Offer</h3>
       <p class="compact">I'm bad at having the motivation to apply for jobs, so by having this on my bingo board, when I look at the board to see how to spend my time, I'll get a little reminder to apply.</p>
 
+      <p>I do, of course, apparently hear back from Canva as to whether I got the grad role there from my internship around April, if I recall. I think some places open their applications for grad roles a little earlier than that, though, so I'll have to apply to places anyway.</p>
+
       <h3>A2: Try Bookbinding</h3>
-      <p class="compact">Specifically, like, handbinding a book. I think this would be cool for a notebook for a TTRPG character. I want to buy paper of the right grain and use a bone folder and stitch and glue signatures, I think it would be fun!</p>
+      <p class="compact">Specifically, like, handbinding a book. I think this would be cool for a notebook for a TTRPG character. I want to buy paper of the right grain and use a bone folder and stitch and glue signatures, I think it would be fun<b>!</b></p>
+
+      <p>My current plan is to bind <a href="https://jan-lawa-lili.gitlab.io/">jan lawa lili</a>, the <a href="https://en.wikipedia.org/wiki/Toki_Pona">toki pona</a> translation of <a href="https://en.wikipedia.org/wiki/The_Little_Prince">The Little Prince</a>, in the <b>sitelen pona</b> script. I find both the book and the language to be very beautiful and special to me, and, like, this is an obscure enough project that nobody will have done it before.</p>
 
       <h3>B2: 10 Theater Visits</h3>
       <p class="compact">Live music, live performance, it always blows me away, it's so amazing to experience. If I go to 10 shows I'll have had a very nice year :D</p>
@@ -117,11 +125,17 @@
       <h3>C2: Tattoo</h3>
       <p class="compact">I want to make a claim to my body.</p>
 
+      <p>Okay but what tattoo do I want to get, right. I'm thinking a simple one, 5-7 moon phases on my inner right forearm, kind of blocky, geometric shapes. The moon is a symbol of beauty, femininity, transformation, phases, and otherness, and so I feel a connection to it.</p>
+
       <h3>D2: Learn a new Piano/Lyre Song</h3>
       <p class="compact">Every time I sit down at an instrument, I play, like, the one song I already know, because I find it frustrating to learn new songs. For this goal I have to actually push through and fully learn a whole new song in its entirety.</p>
 
+      <p>I was originally looking at <b>Starchild</b>, from <b>Ghost Quartet</b>, but I think the piano part is too simple for me to actually be proud enough of it to fulfill this bingo square. My current thought is more along the lines of <b>Why We Build the Wall</b> from <b>Hadestown</b>. (It's so fun to sing and play at once, and I love singing<b>!</b>)</p>
+
       <h3>E2: Do 3 Pinks</h3>
       <p class="compact"><b>Pink</b> is a difficulty in my bouldering gym, around V3. Usually I find I can flash most <b>teals</b> (V2ish), but have no idea how to start pinks - this goal is designed to help me persevere and overcome the difficulty spike between teal and pink.</p>
+
+      <p>Ngl I'm kinda crushing this goal, so I could up the number or even the colour to red? We'll see how I'm feeling.</p>
 
       <h3>A3: Go Off-Grid for a Weekend</h3>
       <p class="compact">I think it would be nice. Off-grid here means not using the internet - with potential exceptions for like, maps and train timetables.</p>
@@ -133,14 +147,14 @@
       <p class="compact">My free space<b>!</b> I think it's fun that my free space can increment each year.</p>
 
       <h3>D3: 60kg</h3>
-      <p class="compact">Okay, this goal demmands a little explanation, because it's more complex than it looks. Also, if you're sensitive to discussion around eating or eating disorders, you might want to skip this one!</p>
-      <!-- TODO make the skip a link! -->
+      <p class="compact">Okay, this goal demmands a little explanation, there's some depth here. Uh, if you're sensitive to discussion around eating or eating disorders, you might want to skip this one<b>!</b></p>
+      <!-- TODO maybe make the skip a link! -->
 
       <p>At the start of the year, I'm sitting a little under 50kg, which is real underweight, as I'm, like, tall. This on its own isn't a problem - BMI is a broad, sweeping assumption, and like as long as I'm getting the nutrients I need I'll be right.</p>
 
       <p>But I'm not very good at consistently eating 3 meals a day - sometimes when I get hungry I just wait for a bit and the pain goes away, which is, not good.</p>
 
-      <p>So, my reasons for this goal aren't just make number go up, I actually just want to consistently eat 3 meals, have more body fat so that I have better energy reserves, not have a heartbeat visible through the skin, etc.</p>
+      <p>So, my reasons for this goal aren't just <q>make number go up</q>, I actually just want to consistently eat 3 meals, have more body fat so that I have better energy reserves, not have a heartbeat visible through the skin, etc.</p>
 
       <p>But I wanted to have concise, specifc goals, so I made it a nice round number<b>!</b></p>
 
@@ -161,11 +175,13 @@
       <h3>D4: Watch 50 Movies</h3>
       <p class="compact">Last year I watched 44 movies, and this year, I wanna do, a little bit more<b>!</b> Part of a larger trend I'm working on where I'm trying to be more intentional with my media consumption - less scrolling, less slop.</p>
 
-      <h3>E4: 3 Wanderhome Sessions</h3>
-      <p class="compact">Okay, this one is complex, the actual goal is: I want to play 3 TTRPG sessions, that are connected (not unrelated one-shots) in a non-D&D indie TTRPG with, like, good game design. I just picked <q>Wanderhome</q> because it meets those criteria and I want to play it<b>!</b></p>
+      <h3>E4: 3 Connected TTRPG Sessions</h3>
+      <p class="compact">Specifically in a non-D&D indie TTRPG with, like, good game design. I'm interested in a lot of <b>Jay Dragon's</b> work in the way that it, like doesn't hold to the near-ubiquitous expectations of the master-player dynamic. So <b>Wanderhome</b> and <b>Sleepaway</b> are solid options, along with a million other games.</p>
 
       <h3>A5: Put 3 Things on Website</h3>
       <p class="compact">I want to get my website off the ground, I think personal websites are awesome and I want one and it's within my power to make that a reality<b>!</b></p>
+
+      <p>Update on this one is that putting things on my website is actually really easy and fun, so I could totally up this, or reserve it to like, <q>3 <b>awesome</b> things</q>.</p>
 
       <h3>B5: 5 New Recipes</h3>
       <p class="compact">It's easy to follow a recipe, but having to look up and refer to a recipe is a big overhead cost, while cooking. If I learn some more, I'll just have them up my sleeve, raring and ready to go<b>!</b></p>
@@ -173,13 +189,15 @@
       <h3>C5: Get + Wear New Swimwear [✓]</h3>
       <p class="compact">I haven't had swimwear I liked in like, 4 years, so I haven't really gone swimming or to the beach in that time. Seems a pretty easy problem to solve, and swimming is fun<b>!</b></p>
 
+      <p>Oh, also<b>!</b> I went swimming with friends to satisfy the <q>Wear</q> part of this goal, and one of them wrote a mini blog post about it, <a href="https://kwellig.garden/posts/swimming">check it out<b>!</b></a></p>
+
       <h3>D5: 50 Auslan Signs</h3>
-      <p class="compact">Ooh this is another one that didn't fit in the box. I've a friend that's considering getting into <b>luka pona</b>, so I'll also consider <b>Conversational in luka pona</b> as an alternate success condition!</p>
+      <p class="compact">Ooh this is another one that didn't fit in the box. I've a friend that's considering getting into <a href="https://sona.pona.la/wiki/luka_pona">luka pona</a>, so I'll also consider <q><b>Conversational in luka pona</b></q> as an alternate success condition<b>!</b></p>
 
       <p>Like, my use case for a signed language is communicating with my (hearing) friends when we're in a loud environment, or when one of them goes non-speaking. Auslan/luka pona both satisfy these use cases, and, like, it makes sense to learn whatever my friends are learning, otherwise what's the point?</p>
 
       <h3>E5: Finish Pact</h3>
-      <p class="compact">Okay, this is a sneaky one. I don't just want to finish reading <b>Pact</b>, (a webserial by wildbow). I also want to typeset it, design a cover, and get it printed, maybe even make a slipcase! I really like the idea of having physical items to represent digital media.</p>
+      <p class="compact">Okay, this is a sneaky one. I don't just want to finish reading <a href="https://pactwebserial.wordpress.com/">Pact</a>, (a webserial by wildbow). I also want to typeset it, design a cover, and get it printed, maybe even make a slipcase<b>!</b> I really like the idea of having physical items to represent digital media.</p>
 
     </div></div>
   </body>
