--- a/bingo2025.html
+++ b/bingo2025.html
@@ -93,6 +93,8 @@
 
       <h3>March</h3>
       <p class="compact"><b>Mar 1st:</b> Watched <b>Chicago!</b> <b>8/50.</b></p>
+      <p class="compact"><b>Mar 2nd:</b> Watched <b>Porco Rosso!</b> <b>9/50.</b></p>
+      <p class="compact"><b>Mar 2nd:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
     
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
