--- a/bingo2025.html
+++ b/bingo2025.html
@@ -96,6 +96,8 @@
       <p class="compact"><b>Mar 2nd:</b> Watched <b>Porco Rosso!</b> <b>9/50.</b></p>
       <p class="compact"><b>Mar 2nd:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
       <p class="compact"><b>Mar 4th:</b> Watched <b>I Are You, You Am Me!</b> <b>10/50.</b></p>
+      <p class="compact"><b>Mar 6th:</b> Applied to <b>Optus.</b></p>
+      <p class="compact"><b>Mar 6th:</b> Watched <b>the 1993 Cabaret proshot!</b> <b>11/50.</b></p>
     
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
