--- a/bingo2025.html
+++ b/bingo2025.html
@@ -98,6 +98,8 @@
       <p class="compact"><b>Mar 4th:</b> Watched <b>I Are You, You Am Me!</b> <b>10/50.</b></p>
       <p class="compact"><b>Mar 6th:</b> Applied to <b>Optus.</b></p>
       <p class="compact"><b>Mar 6th:</b> Watched <b>the 1993 Cabaret proshot!</b> <b>11/50.</b></p>
+      <p class="compact"><b>Mar 7th:</b> Watched <b>Eternal Sunshine of the Spotless Mind!</b> <b>12/50.</b></p>
+      <p class="compact"><b>Mar 12th:</b> Watched <b>Hadestown</b>, my <b>third</b> theater visit of the year<b>!</b></p>
     
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
