--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 
       <p>So as not to leave you disappointed, I'll spare you a sitemap:</p>
 
-      <p class="compact">&nbsp;&nbsp;* <a href="/bingo2025">My 2025 Bingo Board</a></p>
-      <p class="compact">&nbsp;&nbsp;* <a href="/comp1521">My COMP1521 Course Resources</a> <b>[Coming Soon]</b></p>
-      <p class="compact">&nbsp;&nbsp;* <a href="/blackhole">A Black Hole Shader</a></p>
-      <p class="compact">&nbsp;&nbsp;* <a href="/got">Game of Thrones Progress Tracker</a></p>
+      <ul>
+        <li><a href="/bingo2025">My 2025 Bingo Board</a></li>
+        <li><a href="/comp1521">My COMP1521 Course Resources</a> <b>[Coming Soon]</b></li>
+        <li><a href="/blackhole">A Black Hole Shader</a></li>
+        <li><a href="/got">Game of Thrones Progress Tracker</a></li>
+      </ul>
 
       <p>Thanks for stopping by!</p>
 
