--- a/bingo2025.html
+++ b/bingo2025.html
@@ -101,6 +101,7 @@
       <p class="compact"><b>Mar 7th:</b> Watched <b>Eternal Sunshine of the Spotless Mind!</b> <b>12/50.</b></p>
       <p class="compact"><b>Mar 12th:</b> Watched <b>Hadestown</b>, my <b>third</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>Mar 19th:</b> Watched <b>Hadestown</b> again, my <b>fourth</b> theater visit of the year<b>!</b></p>
+      <p class="compact"><b>Mar 26th:</b> Watched <b>Hadestown</b> again, my <b>fifth</b> theater visit of the year<b>!</b> (I promise I'm normal about Hadestown.)</p>
     
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
