--- a/bingo2025.html
+++ b/bingo2025.html
@@ -103,6 +103,7 @@
       <p class="compact"><b>Mar 19th:</b> Watched <b>Hadestown</b> again, my <b>fourth</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>Mar 26th:</b> Watched <b>Hadestown</b> again, my <b>fifth</b> theater visit of the year<b>!</b> (I promise I'm normal about Hadestown.)</p>
       <p class="compact"><b>Mar 28th:</b> Applied to <b>Atlassian.</b></p>
+      <p class="compact"><b>Mar 31st:</b> Unveiled my <b>Hadestown Immersive Lighting Karaoke</b> project to my friends, which I'm hoping will be my CG art project for the year!</p>
     
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
