--- a/bingo2025.html
+++ b/bingo2025.html
@@ -101,10 +101,16 @@
       <p class="compact"><b>Mar 7th:</b> Watched <b>Eternal Sunshine of the Spotless Mind!</b> <b>12/50.</b></p>
       <p class="compact"><b>Mar 12th:</b> Watched <b>Hadestown</b>, my <b>third</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>Mar 19th:</b> Watched <b>Hadestown</b> again, my <b>fourth</b> theater visit of the year<b>!</b></p>
+      <p class="compact"><b>Mar 22nd:</b> Got a <b>Hadestown T-Shirt! (1/5).</b></p>
       <p class="compact"><b>Mar 26th:</b> Watched <b>Hadestown</b> again, my <b>fifth</b> theater visit of the year<b>!</b> (I promise I'm normal about Hadestown.)</p>
       <p class="compact"><b>Mar 28th:</b> Applied to <b>Atlassian.</b></p>
       <p class="compact"><b>Mar 31st:</b> Unveiled my <b>Hadestown Immersive Lighting Karaoke</b> project to my friends, which I'm hoping will be my CG art project for the year!</p>
     
+      <h3>April</h3>
+      <p class="compact"><b>Apr 6th:</b> Went on an awesome thrift shop run with friends, and got a bunch of things, most notably <b>a crazy sci-fi looking poncho-top-thing! (2/5).</b></p>
+      <p class="compact"><b>Apr 7th:</b> Learned to cook <b>Smashed Tacos</b> - very easy<b>!</b> <b>(1/5).</b></p>
+      <p class="compact"><b>Apr 15th:</b> Applied to <b>NBN.</b></p>
+
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
 
@@ -173,6 +179,7 @@
 
       <h3>E3: 5 New Wardrobe Pieces</h3>
       <p class="compact">My wardrobe could do with just an itty bit of expanding, and also, going shopping with friends is fun<b>!</b></p>
+      <p>If I get multiple things on the same day, it'll only count as one!</p>
 
       <h3>A4: Road Trip w+ Frens</h3>
       <p class="compact">Okay so not a <q>Road Trip</q>, per se, that's just in my vocabulary because that's what everyone in CSESoc called holidays. Any kind of holiday adventure will do<b>!</b></p>
@@ -187,7 +194,7 @@
       <p class="compact">Last year I watched 44 movies, and this year, I wanna do, a little bit more<b>!</b> Part of a larger trend I'm working on where I'm trying to be more intentional with my media consumption - less scrolling, less slop.</p>
 
       <h3>E4: 3 Connected TTRPG Sessions</h3>
-      <p class="compact">Specifically in a non-D&D indie TTRPG with, like, good game design. I'm interested in a lot of <b>Jay Dragon's</b> work in the way that it, like doesn't hold to the near-ubiquitous expectations of the master-player dynamic. So <b>Wanderhome</b> and <b>Sleepaway</b> are solid options, along with a million other games.</p>
+      <p class="compact">Specifically in a non-D&D indie TTRPG with, like, good game design. I'm interested in a lot of <b>Jay Dragon's</b> work in the way that it, like, doesn't hold to the near-ubiquitous expectations of the master-player dynamic. So <b>Wanderhome</b> and <b>Sleepaway</b> are solid options, along with a million other games.</p>
 
       <h3>A5: Put 3 Things on Website</h3>
       <p class="compact">I want to get my website off the ground, I think personal websites are awesome and I want one and it's within my power to make that a reality<b>!</b></p>
